// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`paralysis initiator should be paralysed 1`] = `
"*asperiores* использовал _Паралич_ на *alias*
\\[ 📖80 ]
*alias* пытался атаковать *asperiores*, но у него не получилось
_Паралич_ *asperiores*"
`;

exports[`paralysis should handle several casters 1`] = `
"*asperiores* использовал _Паралич_ на *alias*
\\[ 📖80 ]
*repellat* использовал _Паралич_ на *alias*
\\[ 📖80 ]
*alias* пытался атаковать *asperiores*, но у него не получилось
_Паралич_ *asperiores*
_Паралич_ *repellat*"
`;
